// 声明proto的版本
syntax = "proto3";

// 导入新的依赖
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

// 定义proto的包名，用于自动生成代码是防止命名冲突，go会用下面的go_package字段来作为包名
package api.hello.v1;

// 定义go的包名
option go_package = "github.com/wrallen/sampleBazel9/api/hello/v1;api";

// HelloService
service HelloService {
    // Hello
    // 定义一个GET方法，输入参数是HelloRequest，输出参数是HelloResponse
    rpc Hello(HelloRequest) returns (HelloResponse) {
    };
    
    // 使用 Empty 和 Timestamp 的示例方法
    rpc GetTime(google.protobuf.Empty) returns (TimeResponse) {
    };
}

// HelloRequest 
message HelloRequest {
    //  随便定义一个参数，proto3里面所有的字段都是optional
    string name = 1;
}

// HelloResponse
message HelloResponse {
    // 随便定义一个返回参数
    string message = 1;
    // 添加时间戳字段
    google.protobuf.Timestamp created_at = 2;
}

// TimeResponse 使用 Timestamp
message TimeResponse {
    google.protobuf.Timestamp current_time = 1;
    string timezone = 2;
}
